# C3DViewer

./: .gitignore  CMakeLists.txt  LoadersManager.h  Model.h  ObjLoader.h  README.md  basecode.sln  basecode.vcxproj  basecode.vcxproj.filters  imgui.ini
include/: 3DObject.h  3D_utils.h  BoundingBox.h  C3DViewer.h  Camera.h  Framework.h  Light.h  LoadersManager.h  Material.h  Mesh.h  Model.h  ModelLayer.h  MtlLoader.h  OBB.h  ObjLoader.h  Object.h  Scene.h  SceneLayer.h  Shader.h  Texture.h  UI.h  Utils.h
include/glad/: glad.h
lib/: glfw3.lib
misc/shaders/fragment/: ambientLight.frag  flatColor.frag  gourandFrag.frag  phongLight.frag  phongShading.frag  pointColor.frag  takeColor.frag
misc/shaders/geometry/: flatShading.geom
misc/shaders/vertex/: gourandShading.vs  ilumNormal.vs  passPosTex.vs
shaders/: basic.vs  circularPoint.frag  circularPoint.vs  color_shader.frag  color_shader.vs  normals.frag  normals_shader.geom  normals_shader.vs  picking.frag
shaders/fragment/: ilumColor.frag
shaders/vertex/: basic.vs
src/: glad.c  main.cpp
